<resources>
    <string name="app_name">MiniAKD</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="empty_students">No hay estudiantes registrados</string>

    <string name="string_add_course">Nueva asignatura</string>
    <string name="string_add_group">Nueva brigada</string>
    <string name="string_add_student">Nuevo estudiante</string>
    <string name="string_add_turn">Nuevo turno</string>

    <string name="string_add_group_first">No hay brigadas, ¿quieres crear una nueva brigada?</string>

    <string name="string_delete_student">Eliminar estudiante</string>
    <string name="string_delete_course">Eliminar asignatura</string>
    <string name="string_delete_turn">Eliminar turno</string>

    <string name="string_ok">Aceptar</string>
    <string name="string_cancel">Cancelar</string>
    <string name="string_add">Adicionar</string>
    <string name="positive_string">Si</string>
    <string name="negative">No</string>
    <string name="string_edit">Editar</string>
    <string name="string_remove">Eliminar</string>
    <string name="string_no_delete">No eliminar</string>
    <string name="emptyStudentsByBrigade">No hay estudiantes añadidos en la brigada</string>
    <string name="student_count_singular">%d estudiante</string>
    <string name="student_count_plural">%d estudiantes</string>
    <string name="string_yes">Sí</string>
    <string name="empty_brigades">No hay brigadas registradas</string>
    <string name="title_activity_brigade_details">BrigadeDetailsActivity</string>
    <string name="string_edit_group">Editar brigada</string>
    <string name="string_delete_group">Eliminar brigada</string>
    <string name="string_delete_group_with_name">Eliminar brigada %s</string>
    <string name="string_delete_group_text">¿Desea eliminar la brigada junto con todos sus estudiantes?</string>
    <string name="students_count_empty">Sin estudiantes</string>
    <string name="subjects_header">Asignaturas</string>
    <string name="brigades_header">Brigadas</string>
    <string name="students_header">Estudiantes</string>
    <string name="emptyTurns">No hay turnos registrados para el %s</string>
    <string name="today_header">Hoy</string>
    <string name="new_subject_header">Nueva asigantura</string>
    <string name="name_field_hint">Nombre</string>
    <string name="addButtonText">Añadir</string>
    <string name="newSubjectHeader">Nueva asignatura</string>
    <string name="deletedSubjectMessage">Asignatura eliminada</string>
    <string name="saveAction">Guardar</string>
    <string name="addAction">Añadir</string>
    <string name="notRegisteredBrigadesText">No hay brigadas registradas</string>
    <string name="notRegisteredSubjectsText">No hay asignaturas registradas</string>
    <string name="changeViewMenuItemText">Cambiar vista</string>
    <string name="new_turn_header">Nuevo turno</string>
    <string name="local_field_hint">Local</string>
    <string name="turnSubjectTitle">%s (%s)</string>

    <string-array name="periodsNamesArray">
        <item>Primer semestre</item>
        <item>Segundo semestre</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
