<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/nav_header_main">

    <group
        android:id="@+id/sectionsGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_students"
            android:icon="@drawable/ic_person"
            android:title="@string/students_header" />
        <item
            android:id="@+id/nav_brigades"
            android:icon="@drawable/ic_people"
            android:title="@string/brigades_header" />
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_book"
            android:title="@string/subjects_header" />
        <item
            android:id="@+id/nav_evaluations"
            android:icon="@drawable/ic_content_paste"
            android:title="Evaluaciones" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_today"
            android:title="Cortes evalutivos" />
        <item
            android:id="@+id/nav_turns"
            android:icon="@drawable/ic_time"
            android:title="Turnos" />
    </group>

    <group
        android:id="@+id/otherGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_settings"
            android:title="Configuración" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_info"
            android:title="Acerca de" />
    </group>

</menu>
