<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_turns">

    <fragment
        android:id="@+id/nav_students"
        android:name="uci.fiai.miniakd.fragments.students.StudentsFragment"
        android:label="@string/students_header"
        tools:layout="@layout/fragment_students" />

    <fragment
        android:id="@+id/nav_brigades"
        android:name="uci.fiai.miniakd.fragments.brigades.BrigadesFragment"
        android:label="@string/brigades_header"
        tools:layout="@layout/fragments_brigades" />

    <fragment
        android:id="@+id/nav_subjects"
        android:name="uci.fiai.miniakd.fragments.subjects.SubjectsFragment"
        android:label="@string/subjects_header"
        tools:layout="@layout/fragment_subjects" />

    <fragment
        android:id="@+id/nav_evaluations"
        android:name="uci.fiai.miniakd.fragments.settings.SettingsFragment"
        android:label="Evaluaciones"
        tools:layout="@layout/fragment_evaluations" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="uci.fiai.miniakd.fragments.about.AboutFragment"
        android:label="Cortes evaluativos"
        tools:layout="@layout/fragment_cuts" />

    <fragment
        android:id="@+id/nav_turns"
        android:name="uci.fiai.miniakd.fragments.turns.TurnsFragment"
        android:label="Turnos"
        tools:layout="@layout/turns_fragment" />

    <fragment
        android:id="@+id/nav_share"
        android:name="uci.fiai.miniakd.fragments.cuts.CutsFragment"
        android:label="Configuración"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_send"
        android:name="uci.fiai.miniakd.fragments.evaluations.EvaluationsFragment"
        android:label="Acerca de"
        tools:layout="@layout/fragment_about" />
</navigation>