<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_subject_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BottomSheetDialogTitle"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_field_hint"
        android:inputType="textAutoComplete|textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        style="@style/InputField" />


    <EditText
        android:id="@+id/countHoursClassEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Total de Horas/Clase"
        android:inputType="number|numberSigned"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        style="@style/InputField"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countHoursClassEditText"
        style="@style/InputField"
        tools:listitem="@android:layout/simple_spinner_item"/>

    <CheckBox
        android:id="@+id/hasPartialsEvaluationsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Evaluaciones Parciales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        style="@style/InputField"/>

    <CheckBox
        android:id="@+id/hasFinalExamCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Evaluación Final"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/hasPartialsEvaluationsCheckBox"
        app:layout_constraintTop_toBottomOf="@id/hasPartialsEvaluationsCheckBox" />

    <Button
        android:id="@+id/addSubjectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hasFinalExamCheckBox"
        style="@style/BottomSheetDialogPositiveActionButton"
        android:textColor="@android:color/white"
        android:text="@string/addButtonText"/>

</androidx.constraintlayout.widget.ConstraintLayout>